WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89982
On Mac, autocorrection sometimes fails to take place in Safari.
https://bugs.webkit.org/show_bug.cgi?id=89982
Summary
On Mac, autocorrection sometimes fails to take place in Safari.
Jia Pu
Reported
2012-06-26 08:35:40 PDT
This bug was introduced months ago, when spelling checking related code was being moved around. I haven't been able to nail down exactly which commit. <
rdar://problem/11740064
>
Attachments
Patch.
(1.94 KB, patch)
2012-06-26 09:05 PDT
,
Jia Pu
no flags
Details
Formatted Diff
Diff
Revised patch.
(2.83 KB, patch)
2012-06-27 11:00 PDT
,
Jia Pu
rniwa
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jia Pu
Comment 1
2012-06-26 09:05:40 PDT
Created
attachment 149540
[details]
Patch.
Darin Adler
Comment 2
2012-06-26 10:54:03 PDT
Comment on
attachment 149540
[details]
Patch. Can we make a regression test for this? What prevents this from getting reintroduced next time someone refactors?
Darin Adler
Comment 3
2012-06-26 10:54:32 PDT
(In reply to
comment #2
)
> Can we make a regression test for this?
Oh, I see your comment now. There is a regression test for this, but it’s turned off!
WebKit Review Bot
Comment 4
2012-06-26 11:39:15 PDT
Comment on
attachment 149540
[details]
Patch. Clearing flags on attachment: 149540 Committed
r121271
: <
http://trac.webkit.org/changeset/121271
>
WebKit Review Bot
Comment 5
2012-06-26 11:39:26 PDT
All reviewed patches have been landed. Closing bug.
Vicki Pfau
Comment 6
2012-06-26 15:32:07 PDT
This change has been causing test regressions in Safari on many editing, selection, pasteboard and spell checking tests.
Ryosuke Niwa
Comment 7
2012-06-27 02:08:21 PDT
This patch caused 12+ tests to fail on Lion:
http://build.webkit.org/results/Apple%20Lion%20Debug%20WK1%20(Tests)/r121275%20(405)/results.html
Ryosuke Niwa
Comment 8
2012-06-27 02:08:35 PDT
I think we need to roll this patch out.
WebKit Review Bot
Comment 9
2012-06-27 02:20:01 PDT
Re-opened since this is blocked by 90056
Jia Pu
Comment 10
2012-06-27 11:00:27 PDT
Created
attachment 149774
[details]
Revised patch.
Ryosuke Niwa
Comment 11
2012-07-04 14:24:42 PDT
Comment on
attachment 149774
[details]
Revised patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=149774&action=review
> Source/WebCore/ChangeLog:5 > +
Bug 89982
- On Mac, autocorrection sometimes fails to take place in Safari. > + > + On Mac, autocorrection sometimes fails to take place in Safari.
What's up with this? Please fix it before landing the patch.
Jia Pu
Comment 12
2012-07-11 15:50:59 PDT
Manually landed after fixing the minor ChangeLog issue pointed by Ryosuke. <
http://trac.webkit.org/changeset/122380
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug